# llm_cherdak

./: Assistant.md  README.md  langchain_flask2.py  langchain_from_txt.py  openai_client.py  sdxl_diffusion_text2img.py  test_ollama.py  test_openai_langchain.py
comfyui-api-test/: basic_api.py  websockets_api_example_ws_images.py  workflow_api_SabrinaCyberpunk.json
diffusion_torch/: AutoTrain_Dreambooth.ipynb  install_logs.txt  pyproject.toml  t2.py  test_diff.py  turbo.py
diffusion_torch/.ipynb_checkpoints/: AutoTrain_Dreambooth-checkpoint.ipynb
diffusion_torch/my-dreambooth-Capibara/: training_params.json
diffusion_torch/my-dreambooth-Capibara/autotrain-data/: prompts.json
diffusion_torch/my-dreambooth-project/: prompt.txt  training_params.json
openai_clients/: bot2.py  bot_sd_prompt.py  bot_sd_whisper copy.py  bot_sd_whisper.py  bott.py  bott_only_text_working.py  generate.py  ollama_client.py  ssss.py  testmodel.py  testwhisper.py  ttt.py
