[tool.poetry]
name = "diffusion_torch"
version = "0.1.0"
description = ""
authors = ["VasyaLutiy"]

[tool.poetry.dependencies]
python = "^3.10"
diffusers = "^0.27.2"
transformers = "^4.41.0"
scipy = "^1.13.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
